# dbus-settings-bindings

./: .gitignore  .rustfmt.toml  Cargo.toml
a11y/: Cargo.toml
a11y/src/: bus.rs  lib.rs  status.rs
accounts-zbus/: Cargo.toml  LICENSE.md
accounts-zbus/examples/: userinfo.rs
accounts-zbus/src/: accounts.rs  lib.rs  user.rs
bluez/: Cargo.toml
bluez/examples/: bluetoothctl.rs  bluezagent.rs
bluez/src/: adapter.rs  adapter1.rs  agent1.rs  agent_manager.rs  agent_manager1.rs  battery1.rs  device.rs  device1.rs  health_manager1.rs  lib.rs  media.rs  network_server.rs  profile_manager.rs  profile_manager1.rs
bluez/src/bindings/: adapter.rs  bluez.rs  device.rs  mod.rs
cosmic-settings-daemon/: Cargo.toml
cosmic-settings-daemon/examples/: simple.rs
cosmic-settings-daemon/src/: lib.rs
fprint/: Cargo.toml
fprint/src/: lib.rs
geoclue2/: Cargo.toml
geoclue2/src/: lib.rs
hostname1/: Cargo.toml
hostname1/examples/: hostnamectl.rs
hostname1/src/: lib.rs
locale1/: Cargo.toml
locale1/examples/: locale.rs
locale1/src/: lib.rs
mpris2/: Cargo.toml  LICENSE.md  README.md
mpris2/examples/: enumerate.rs  list.rs
mpris2/src/: bindings.rs  enumerator.rs  error.rs  lib.rs  media_player.rs  metadata.rs  player.rs  playlists.rs  track.rs  track_list.rs
mpris2/src/bindings/: media_player.rs  player.rs  playlist.rs  track_list.rs
mpris2/src/playlists/: id.rs  ordering.rs  playlist.rs
networkmanager/: Cargo.toml
networkmanager/src/: access_point.rs  active_connection.rs  config.rs  connection.rs  device.rs  lib.rs  nm.rs  settings.rs  util.rs
networkmanager/src/config/: ip4.rs  ip6.rs
networkmanager/src/device/: bluetooth.rs  tun.rs  wired.rs  wireguard.rs  wireless.rs
networkmanager/src/interface/: access_point.rs  active_connection.rs  config.rs  connection.rs  device.rs  enums.rs  mod.rs  settings.rs  statistics.rs
networkmanager/src/interface/config/: ip4.rs  ip6.rs
networkmanager/src/interface/device/: bluetooth.rs  tun.rs  wired.rs  wireguard.rs  wireless.rs
networkmanager/src/interface/settings/: connection.rs
networkmanager/src/settings/: connection.rs
nm-secret-agent-manager/: Cargo.toml
nm-secret-agent-manager/src/: lib.rs
switcheroo-control/: Cargo.toml
switcheroo-control/examples/: switcheroo.rs
switcheroo-control/src/: lib.rs
timedate/: Cargo.toml  README.md
timedate/examples/: timedatectl.rs
timedate/src/: lib.rs
upower/: Cargo.toml  README.md
upower/examples/: device.rs  on_battery.rs
upower/src/: device.rs  kbdbacklight.rs  lib.rs  upower.rs
xdg-desktop-portal/: Cargo.toml  README.md
xdg-desktop-portal/examples/open/: Cargo.toml
xdg-desktop-portal/examples/open/src/: main.rs
xdg-desktop-portal/src/: file_chooser.rs  lib.rs  request.rs
