[workspace]

resolver = "2"

members = [
	"a11y",
	"accounts-zbus",
	"bluez",
	"cosmic-settings-daemon",
	"fprint",
	"geoclue2",
	"hostname1",
	"locale1",
	"mpris2",
	"networkmanager",
	"switcheroo-control",
	"timedate",
	"upower",
]

[workspace.dependencies]
futures-channel = "0.3.30"
futures-util = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["parsing"] }
tracing = "0.1.40"
zbus = { version = "4.2.1" }
zvariant = { version = "4.1.0" }
