[workspace]

resolver = "3"

members = [
	"a11y",
	"accounts-zbus",
	"bluez",
	"cosmic-settings-daemon",
	"geoclue2",
	"hostname1",
	"locale1",
	"mpris2",
	"networkmanager",
	"switcheroo-control",
	"timedate",
	"upower",
]

[workspace.dependencies]
futures-channel = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
time = { version = "0.3", features = ["parsing"] }
tracing = "0.1.41"
zbus = { version = "5.11.0" }
zvariant = { version = "5.7.0" }
