[package]
name = "bluez-zbus"
version = "0.1.0"
description = "dbus bindings for org.bluez with zbus"
repository = "https://github.com/pop-os/dbus-settings-bindings"
edition = "2021"
license = "MPL-2.0"
categories = ["os::linux-apis"]
keywords = ["dbus", "bluez", "zbus", "bluetooth"]

[dependencies]
futures = "0.3.30"
zbus = "4.2.1"

[dev-dependencies]
pico-args = "0.5.0"
tokio = { version = "1", features = ["full"] }
