[package]
name = "bluez-zbus"
version = "0.1.0"
description = "dbus bindings for org.bluez with zbus"
repository = "https://github.com/pop-os/dbus-settings-bindings"
edition = "2021"
license = "MPL-2.0"
categories = ["os::linux-apis"]
keywords = ["dbus", "bluez", "zbus", "bluetooth"]

[dependencies]
futures-util.workspace = true
zbus.workspace = true

[dev-dependencies]
pico-args = "0.5.0"
tokio = { version = "1", features = ["full"] }
