[package]
name = "cosmic-settings-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus.workspace = true

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
zbus.workspace = true
zbus.features = ["tokio"]
zbus.default-features = false