[package]
name = "geoclue2"
description = "zbus-based bindings for GeoClue2 on Linux"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_repr = "0.1.20"
zbus.workspace = true
