[package]
name = "mpris2-zbus"
description = "zbus-based bindings for MPRIS2 (Media Player Remote Interfacing Specification) on Linux"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["parsing"] }
zbus = "3.8.0"
zvariant = "3.10"

[dev-dependencies]
miette = { version = "4.3", features = ["fancy"] }
tokio = { version = "1", features = ["full"] }
