[package]
name = "mpris2-zbus"
description = "zbus-based bindings for MPRIS2 (Media Player Remote Interfacing Specification) on Linux"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
futures-util.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
zbus.workspace = true
zvariant.workspace = true

[dev-dependencies]
miette = { version = "7.6", features = ["fancy"] }
tokio = { version = "1", features = ["full"] }
