[package]
name = "cosmic-dbus-networkmanager"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
bitflags = "1.3"
derive_builder = "0.12"
procfs = { version = "0.14", default-features = false }
time = "0.3"
zvariant = "3.1.2"

[dependencies.zbus]
git = "https://gitlab.freedesktop.org/dbus/zbus"
branch = "main"
