[package]
name = "cosmic-dbus-networkmanager"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
bitflags = "2.4"
derive_builder = "0.20.2"
procfs = { version = "0.17", default-features = false }
thiserror.workspace = true
time.workspace = true
zvariant.workspace = true
zbus.workspace = true
