[package]
name = "timedate-zbus"
version = "0.1.0"
description = "a dbus client (using zbus) for timedate"
repository = "https://github.com/pop-os/dbus-settings-bindings"
license = "MPL-2.0"
edition = "2024"
categories = ["os::unix-apis"]
keywords = ["systemd", "timedate", "zbus"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
zbus.workspace = true

[dev-dependencies]
chrono = "0.4.42"
chrono-tz = "0.10.4"
zbus.workspace = true
zbus.features = ["tokio"]

[dev-dependencies.tokio]
version = "1.47.1"
features = ["full"]
