[package]
name = "upower_dbus"
version = "0.3.2"
authors = ["Michael Murphy <mmstick@pm.me>"]
repository = "https://github.com/pop-os/dbus-settings-bindings"
description = "a dbus client (using zbus) for upower"
readme = "README.md"
license = "MIT"
categories = ["os::unix-apis"]
keywords = ["linux", "systemd", "logind", "dbus", "zbus"]
edition = "2024"

[dependencies]
serde.workspace = true
serde_repr = "0.1.20"
zbus.workspace = true

[dev-dependencies]
futures = "0.3.31"
