[package]
name = "xdg-desktop-open"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg-desktop-portal = { path = "../../" }
futures-util = "0.3.28"
tokio = { version = "1", features = ["full"] }
zbus = { version = "3.14.1", features = ["tokio"] }
